refactor(core): async and config reload improvements
- MemberRankModule.onConfigReload: rebuild OnlineActivityTracker; default contribution on join reads current config
- GuildFundsGUI / GuildLogsGUI: remove supplyAsync + .get(); use thenCompose/thenApply chaining
- RelationManagementGUI / AdminGuildGUI / GuildAdminCommand: use join() after allOf to avoid pseudo-blocking
- Reduce log spam in logs GUI; fallback messages use English (zh.yml retains Chinese)